Merge the speed improvements branch. Also implements the remaining features.